Fix image look on mobile

--- a/src/pages/journal.css
+++ b/src/pages/journal.css
@@ -121,6 +121,11 @@
 
   .journal .featured {
     display: block;
+    margin: 50px auto 0px auto;
+  }
+
+  .journal .featured .title {
+    padding: 20px 0;
   }
 
 }
